k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: digdigdigdig/manualproject-backend:5648f1ed7daf15da983431873e2ff6cec0017fee
        ports:
        - containerPort: 5001
