k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: digdigdigdig/manualproject-frontend:latest 
        ports:
        - containerPort: 80
