k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
