k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
