k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app
  name: postgres-service
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
